--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>itms-services:///?action=download-manifest&url=https://github.com/zhouyikai129/hps/blob/master/sed-1.1.0-prod.ipa</string>
+					<string>https://github.com/zhouyikai129/hps/blob/master/sed-1.1.0-prod.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
