--- a/manifest.plist
+++ b/manifest.plist
@@ -11,17 +11,31 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/zhouyikai129/hps/blob/master/sed-1.1.0-prod.ipa</string>
+					<string>https://github.com/zhouyikai129/hps/blob/master/sed.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>url</key>
+					<string>https://www.app.img1</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>url</key>
+					<string>https://www.app.img2</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.*****EN.****</string>
+				<string>cn.net.bewgcloud.sed</string>
 				<key>bundle-version</key>
-				<string>0.1</string>
+				<string>1.1.0</string>
 				<key>kind</key>
 				<string>software</string>
+				<key>platform-identifier</key>
+				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
 				<string>污水运营平台</string>
 			</dict>
